fix anchor link scrolling behind sticky nav bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,9 @@ nav > a {
 section {
   margin: 70px;
 }
+h2 {
+  scroll-margin-top: 2.5em;
+}
 
 #projects {
   display: flex;
